# stackchan-mcp

./: .gitignore
firmware/: gen_nvs.py  nvs_config.env.sample
gateway/: .env.example  .gitignore  README.md  pyproject.toml
gateway/stackchan_mcp/: __init__.py  __main__.py  audio_input_hook.py  audio_stream.py  capture_server.py  cli.py  conversation.py  esp32_client.py  familiar_client.py  gateway.py  http_server.py  mdns_advertiser.py  protocol.py  queue.py  server.py  stdio_server.py
gateway/stackchan_mcp/handlers/: camera.py
gateway/stackchan_mcp/stt/: orchestrator.py
gateway/stackchan_mcp/tts/: __init__.py  audio_utils.py  elevenlabs.py  emoji_expression.py  orchestrator.py  voicevox.py
gateway/tests/: test_audio_input_hook.py  test_capture_server.py  test_cli.py  test_esp32_client.py  test_event_dispatch.py  test_event_log.py  test_gateway.py  test_http_server.py  test_mdns_advertiser.py  test_notify_config.py  test_orchestrator.py  test_ownership.py  test_send_pcm_audio.py  test_send_pcm_stream.py  test_stdio_server.py  test_stt_audio_utils.py  test_stt_framework.py  test_stt_orchestrator.py  test_tts_framework.py
