[project]
name = "stackchan-mcp"
version = "0.1.0"
description = "MCP server for StackChan (xiaozhi-esp32) — WebSocket + JSON-RPC 2.0"
requires-python = ">=3.13"
dependencies = [
    "websockets>=12",
    "pydantic>=2",
    "python-dotenv",
    "mcp>=1.0",
    "aiohttp>=3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
